app/imports/custom/owlgred/client/js/export_grammar_parser_OWLGrEd.js

  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { main: peg$parsemain },
        peg$startRuleFunction  = peg$parsemain,

        peg$c0 = function(expressions) { return expressions; },
        peg$c1 = function(axiom) { return { axiom: axiom }; },
        peg$c2 = "(",
        peg$c3 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c4 = ")",
        peg$c5 = { type: "literal", value: ")", description: "\")\"" },
        peg$c6 = function(string, expressions) {
              return {
                string,
                expressions: expressions.map(e => e[0]) // Extract only the `expression` part
              };
            },
        peg$c7 = function(filter) { return { filter: filter }; },
        peg$c8 = "[",
        peg$c9 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c10 = "||",
        peg$c11 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c12 = "]",
        peg$c13 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c14 = function(first, rest) {
              // Collect all `filterExpr` instances into an array
              const allFilterExprs = [first, ...rest.map(r => r[3])];
              return allFilterExprs;
            },
        peg$c15 = function(filterItem1, filterOp, filterItem2) {
              return { filterItem1: filterItem1, filterOp: filterOp, filterItem2: filterItem2 };
            },
        peg$c16 = "'",
        peg$c17 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c18 = "true",
        peg$c19 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c20 = "false",
        peg$c21 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c22 = "==",
        peg$c23 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c24 = "!=",
        peg$c25 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c26 = ">",
        peg$c27 = { type: "literal", value: ">", description: "\">\"" },
        peg$c28 = function(filterItem1, filterOp, filterItem2) {
              return {
                filterItem1: filterItem1,
                filterOp: filterOp,
                filterItem2: filterItem2
              };
            },
        peg$c29 = function(path, filter) {
              return {
                path: path,
                filter: filter
              };
            },
        peg$c30 = function(path) { return { path: path }; },
        peg$c31 = "/",
        peg$c32 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c33 = "..",
        peg$c34 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c35 = function(path) {
              // Extract the `pathBody` from each matched segment
              const pathBodies = path.map(path => path[1]);
              return pathBodies;
            },
        peg$c36 = ":",
        peg$c37 = { type: "literal", value: ":", description: "\":\"" },
        peg$c38 = function(path, func) {
              return {
                pathFunction: {
                  path: path, // `path` is already structured as an array if your `path` rule is returning one
                  function: func // `func` is the object returned by the `function` rule
                }
              };
            },
        peg$c39 = function(functionn) { return { function:functionn }; },
        peg$c40 = "!",
        peg$c41 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c42 = function(expressions, filterExpr) { return { mandatory: {expressions:expressions, filterExpr:filterExpr} }; },
        peg$c43 = "?",
        peg$c44 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c45 = function(expressions) {
              return {
                optional: {
                  expressions: expressions.map(e => e[0]) // Extract only the first element from each match
                }
              };
            },
        peg$c46 = function(functionExpr) {
              return {
                optional: {
                  functionExpr: functionExpr
                }
              };
            },
        peg$c47 = "^^",
        peg$c48 = { type: "literal", value: "^^", description: "\"^^\"" },
        peg$c49 = "@",
        peg$c50 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c51 = "<",
        peg$c52 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c53 = "#",
        peg$c54 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c55 = function() { return {axiomSymbol:text()}; },
        peg$c56 = /^[A-Za-z]/,
        peg$c57 = { type: "class", value: "[A-Za-z]", description: "[A-Za-z]" },
        peg$c58 = /^[0-9]/,
        peg$c59 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c60 = ".",
        peg$c61 = { type: "literal", value: ".", description: "\".\"" },
        peg$c62 = /^[A-Za-z_]/,
        peg$c63 = { type: "class", value: "[A-Za-z_]", description: "[A-Za-z_]" },
        peg$c64 = /^[A-Za-z0-9_+]/,
        peg$c65 = { type: "class", value: "[A-Za-z0-9_+]", description: "[A-Za-z0-9_+]" },
        peg$c66 = function() { return text(); },
        peg$c67 = /^[A-Za-z!+: ]/,
        peg$c68 = { type: "class", value: "[A-Za-z!+: ]", description: "[A-Za-z!+: ]" },
        peg$c69 = function() {
              return text();
            },
        peg$c70 = "-",
        peg$c71 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c72 = " ",
        peg$c73 = { type: "literal", value: " ", description: "\" \"" },
        peg$c74 = "\n",
        peg$c75 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c76 = "$",
        peg$c77 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c78 = "getUri",
        peg$c79 = { type: "literal", value: "getUri", description: "\"getUri\"" },
        peg$c80 = function(name, namespacePart) {
              return {
                functionType: "getUri",
                name: name,
                namespace: namespacePart ? namespacePart[1] : null // Extract namespace if matched, otherwise null
              };
            },
        peg$c81 = "\"",
        peg$c82 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c83 = "getExpression",
        peg$c84 = { type: "literal", value: "getExpression", description: "\"getExpression\"" },
        peg$c85 = function(name) { return { functionType: "getExpression", name:name }; },
        peg$c86 = "$value",
        peg$c87 = { type: "literal", value: "$value", description: "\"$value\"" },
        peg$c88 = function(pathPart) {
              return {
                functionType: "value",
                path: pathPart ? pathPart[1] : null  // Ensure path is extracted correctly
              };
            },
        peg$c89 = function(pathPart) {
              return {
                functionType: "value",
                path: pathPart ? pathPart[1].path : null,  // Extract only the array, not the object
                inQuotes: true
              };
            },
        peg$c90 = "$getDomainOrRange",
        peg$c91 = { type: "literal", value: "$getDomainOrRange", description: "\"$getDomainOrRange\"" },
        peg$c92 = function(pathPart) {
              return {
                functionType: "getDomainOrRange",
                path: pathPart ? pathPart[1] : null // Extract `pathBody` if matched, else `null`
              };
            },
        peg$c93 = "$getClassExpr",
        peg$c94 = { type: "literal", value: "$getClassExpr", description: "\"$getClassExpr\"" },
        peg$c95 = function(pathPart) {
              return {
                functionType: "getClassExpr",
                path: pathPart ? (pathPart[1] || null) : null // Extracts pathFilter or path, else null
              };
            },
        peg$c96 = "$getClassName",
        peg$c97 = { type: "literal", value: "$getClassName", description: "\"$getClassName\"" },
        peg$c98 = function(pathPart) {
              return {
                functionType: "getClassName",
                path: pathPart ? (pathPart[1] || null) : null // Extracts pathFilter or path, else null
              };
            },
        peg$c99 = "$getObjectExpr",
        peg$c100 = { type: "literal", value: "$getObjectExpr", description: "\"$getObjectExpr\"" },
        peg$c101 = function(pathPart) {
              return {
                functionType: "getObjectExpr",
                path: pathPart ? (pathPart[1] || null) : null // Extracts pathFilter or path, else null
              };
            },
        peg$c102 = "$getAnnotationProperty(",
        peg$c103 = { type: "literal", value: "$getAnnotationProperty(", description: "\"$getAnnotationProperty(\"" },
        peg$c104 = function(name, namespacePart) {
              return {
                functionType: "getAnnotationProperty",
                name: name,
                namespace: namespacePart ? namespacePart[1] : null
              };
            },
        peg$c105 = "$getRoleExpr",
        peg$c106 = { type: "literal", value: "$getRoleExpr", description: "\"$getRoleExpr\"" },
        peg$c107 = function() { return { functionType: "getRoleExpr" }; },
        peg$c108 = "$getHasKeyProperties('",
        peg$c109 = { type: "literal", value: "$getHasKeyProperties('", description: "\"$getHasKeyProperties('\"" },
        peg$c110 = "')",
        peg$c111 = { type: "literal", value: "')", description: "\"')\"" },
        peg$c112 = function() { return { functionType: "getHasKeyProperties", string: text() }; },
        peg$c113 = "$getAttributeType(",
        peg$c114 = { type: "literal", value: "$getAttributeType(", description: "\"$getAttributeType(\"" },
        peg$c115 = function(type, isObjectAttribute) { return { functionType: "getAttributeType", type: type, isObjectAttribute:isObjectAttribute }; },
        peg$c116 = "$getMultiplicity('",
        peg$c117 = { type: "literal", value: "$getMultiplicity('", description: "\"$getMultiplicity('\"" },
        peg$c118 = "Min",
        peg$c119 = { type: "literal", value: "Min", description: "\"Min\"" },
        peg$c120 = "Max",
        peg$c121 = { type: "literal", value: "Max", description: "\"Max\"" },
        peg$c122 = "Exact",
        peg$c123 = { type: "literal", value: "Exact", description: "\"Exact\"" },
        peg$c124 = function(multiplisity) { return { functionType: "getMultiplicity", multiplisity: multiplisity }; },
        peg$c125 = "$getTypeExpression(",
        peg$c126 = { type: "literal", value: "$getTypeExpression(", description: "\"$getTypeExpression(\"" },
        peg$c127 = function(type, isObjectAttribute) { return { functionType: "getTypeExpression", type: type, isObjectAttribute:isObjectAttribute }; },
        peg$c128 = "$elemType",
        peg$c129 = { type: "literal", value: "$elemType", description: "\"$elemType\"" },
        peg$c130 = function() { return { functionType: "elemType" }; },
        peg$c131 = "$isEmpty",
        peg$c132 = { type: "literal", value: "$isEmpty", description: "\"$isEmpty\"" },
        peg$c133 = function() { return { functionType: "isEmpty" }; },
        peg$c134 = "$count",
        peg$c135 = { type: "literal", value: "$count", description: "\"$count\"" },
        peg$c136 = function() { return { functionType: "count" }; },
        peg$c137 = "$getContainer",
        peg$c138 = { type: "literal", value: "$getContainer", description: "\"$getContainer\"" },
        peg$c139 = function() { return { functionType: "getContainer" }; },
        peg$c140 = "$getDataTypeRestriction",
        peg$c141 = { type: "literal", value: "$getDataTypeRestriction", description: "\"$getDataTypeRestriction\"" },
        peg$c142 = function() { return { functionType: "getDataTypeRestriction" }; },
        peg$c143 = "$getDataTypeExpression",
        peg$c144 = { type: "literal", value: "$getDataTypeExpression", description: "\"$getDataTypeExpression\"" },
        peg$c145 = function() { return { functionType: "getDataTypeExpression" }; },
        peg$c146 = "$isURI",
        peg$c147 = { type: "literal", value: "$isURI", description: "\"$isURI\"" },
        peg$c148 = function() { return { functionType: "isURI" }; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsemain() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 52 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parsespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseexpression();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseexpression();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseexpression() {
      var s0;

      var key    = peg$currPos * 52 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$parseaxiomSymbols();
      if (s0 === peg$FAILED) {
        s0 = peg$parseaxiom();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefilter();
          if (s0 === peg$FAILED) {
            s0 = peg$parsefunctionExpr();
            if (s0 === peg$FAILED) {
              s0 = peg$parsepathFunction();
              if (s0 === peg$FAILED) {
                s0 = peg$parsepath();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseoptional();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsemandatory();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsestring();
                    }
                  }
                }
              }
            }
          }
        }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseaxiom() {
      var s0, s1;

      var key    = peg$currPos * 52 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseaxiomExpr();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseaxiomExpr() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 52 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parsestring();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 40) {
          s2 = peg$c2;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsespace();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$parseexpression();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsespace();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              if (s7 !== peg$FAILED) {
                s6 = [s6, s7];
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$currPos;
                s6 = peg$parseexpression();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsespace();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s6 = [s6, s7];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c4;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s1, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsefilter() {
      var s0, s1;

      var key    = peg$currPos * 52 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parsefilterExprs();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsefilterExprs() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      var key    = peg$currPos * 52 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 91) {
        s1 = peg$c8;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefilterExpr();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parsespace();
          if (s5 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c10) {
              s6 = peg$c10;
              peg$currPos += 2;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parsespace();
              if (s7 !== peg$FAILED) {
                s8 = peg$parsefilterExpr();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parsespace();
            if (s5 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c10) {
                s6 = peg$c10;
                peg$currPos += 2;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsespace();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsefilterExpr();
                  if (s8 !== peg$FAILED) {
                    s5 = [s5, s6, s7, s8];
                    s4 = s5;
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 93) {
              s4 = peg$c12;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c13); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsefilterExpr() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 52 + 6,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
